--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "pack-windows": "electron-packager . --platform=win32 --icon=assets/logo.ico --overwrite=true --out=dist",
     "installer-ios": "electron-installer-dmg ./dist/FTALK-darwin-x64/FTALK.app FTALK",
     "dist": "build",
-    "publish": "build --win --mac -p always"
+    "publish": "build --win --mac -p always",
+    "publish-windows": "build --win -p always",
+    "publish-mac": "build --mac -p always"
   },
   "author": "Giovanni Pucci <giobaer2011@live.com> (http://www.finer.com.br)",
   "license": "ISC",
