--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
       ]
     },
     "linux": {
-      "icon":"build/1024x1024.png",
+      "icon": "build/1024x1024.png",
       "target": [
         "AppImage"
       ],
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "auto-launch": "5.0.5",
+    "desktop-idle": "^1.1.2",
     "electron-is-dev": "^1.0.1",
     "electron-log": "2.2.17",
     "electron-updater": "4.0.6",
