--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ftalk-electron",
   "productName": "FTALK",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Chat FTALK",
   "main": "index.js",
   "scripts": {
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "auto-launch": "5.0.5",
+    "electron-download-manager": "^2.3.0",
     "electron-is-dev": "^1.0.1",
     "electron-log": "2.2.17",
     "electron-updater": "4.0.6",
